# tusur_labs

./: README.md
lab_1/: CMakeLists.txt
lab_1/include/: myDescription.h  myFormatDescription.h  speedCalc.h
lab_1/src/: main.cpp  myDescription.cpp  myFormatDescription.cpp  speedCalc.cpp
lab_2/: CMakeLists.txt
lab_2/include/: oneTask.h  threeTask.h  twoTask.h
lab_2/src/: main.cpp  oneTask.cpp  threeTask.cpp  twoTask.cpp
